--- a/resource/scss/base/_utils.scss
+++ b/resource/scss/base/_utils.scss
@@ -1,4 +1,4 @@
-@use '../abstracts' as *;
+@use "../abstracts" as *;
 * {
   margin: 0;
   padding: 0;
@@ -28,7 +28,6 @@ body {
   // @each $key, $value in $font-default {
   //   #{$key}: #{$value};
   // }
-  overflow-x: hidden;
 }
 
 ul,
@@ -86,214 +85,6 @@ option {
   border: none;
   outline: none;
   font-size: fluid(14, 16);
-}
-
-.root_daum_roughmap .wrap_controllers {
-  display: none;
-}
-
-.lord {
-  width: fluid(48, 64);
-  height: fluid(48, 64);
-}
-
-.bg-gray {
-  background: var(--clr-gray-50);
-}
-
-// 커스텀 //
-
-.imgbg {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.font-en {
-  font-family: 'Cormorant Garamond', serif;
-}
-.font-kr {
-  font-family: 'Noto Serif KR', serif;
-}
-
-.f-wrap {
-  display: flex;
-}
-
-.reveal {
-  overflow: hidden;
-
-  span {
-    display: block;
-  }
-}
-
-.text-bg {
-  position: relative;
-  display: inline-block;
-  z-index: 2;
-
-  &::before {
-    content: '';
-    position: absolute;
-    display: block;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0%;
-    width: 115%;
-    height: fluid(10, 15);
-    background-color: #edeae6;
-    z-index: -1;
-
-    @include mq(xs) {
-      display: none;
-    }
-  }
-}
-
-.base-btn {
-  background-color: var(--clr-primary-500);
-  border-radius: 0.8rem;
-  padding: fluid(10, 12) fluid(20, 24);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.3s;
-  color: #fff;
-
-  &:hover {
-    background-color: var(--clr-primary-700);
-  }
-}
-
-.arrow-btn {
-  background-color: var(--clr-primary-500);
-  border-radius: 0.8rem;
-  padding: fluid(12, 14) fluid(20, 24);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.3s;
-  color: #fff;
-
-  &:hover {
-    background-color: var(--clr-primary-700);
-
-    i {
-      transform: translateX(0.3rem);
-    }
-  }
-
-  i {
-    margin-left: 1.2rem;
-    transition: transform 0.3s;
-  }
-}
-
-.sub-marquee {
-  position: relative;
-  overflow-x: hidden;
-
-  img {
-    @include mq(md) {
-      width: 50%;
-    }
-  }
-}
-
-.bullet {
-  display: flex;
-
-  &::before {
-    content: '';
-    width: 0.4rem;
-    height: 0.4rem;
-    min-width: 0.4rem;
-    min-height: 0.4rem;
-    border-radius: 50%;
-    left: 0;
-    top: 1rem;
-    margin-right: 1rem;
-    position: relative;
-    display: block;
-    background-color: var(--clr-primary-100);
-  }
-}
-
-.sub-hg {
-  text-align: center;
-
-  br {
-    @include mq(md) {
-      display: none;
-    }
-  }
-
-  h2 {
-    color: var(--clr-gray-900);
-
-    b {
-      color: var(--clr-primary-400);
-    }
-  }
-
-  p {
-    color: var(--clr-gray-800);
-  }
-}
-
-.word-reveal {
-  overflow: hidden;
-}
-
-.sub-pg {
-  position: relative;
-  z-index: 2;
-  background-color: #fff;
-}
-
-.search-box {
-  position: relative;
-  width: 100%;
-  max-width: 52rem;
-  margin-left: auto;
-  margin-right: auto;
-
-  .box-input {
-    position: relative;
-    width: 100%;
-
-    input {
-      border-bottom: 0.2rem solid #000;
-      width: 100%;
-      height: 5.5rem;
-      padding: 1.6rem 2rem 1.6rem 0;
-      padding-right: 5rem;
-      transition: border-color 0.3s ease;
-      font-family: 'Pretendard';
-      font-size: fluid(16, 20);
-      line-height: 1.4;
-
-      &:focus {
-        outline: none;
-        border-bottom: 0.2rem solid var(--clr-primary-400);
-      }
-    }
-
-    button {
-      position: absolute;
-      top: 50%;
-      right: 0;
-      font-size: fluid(24, 28);
-      transform: translateY(-50%);
-
-      i {
-        &:hover {
-          color: var(--clr-primary-500);
-        }
-      }
-    }
-  }
 }
 
 .--tac {
