--- a/resource/scss/components/index.scss
+++ b/resource/scss/components/index.scss
@@ -1,5 +1,6 @@
-@use './breadcrumb';
-@use './button';
-@use './form';
-@use './table';
-@use './_pagination';
+@use "./breadcrumb";
+@use "./button";
+@use "./form";
+@use "./table";
+@use "./_pagination";
+@use "./code-block";
