--- a/resource/scss/collection/tokens/_theme-light.scss
+++ b/resource/scss/collection/tokens/_theme-light.scss
@@ -37,7 +37,7 @@ $theme-light: (
     focus: var(--clr-gray-100),
     disabled: var(--clr-gray-400),
     text: var(--clr-gray-900),
-    border: var(--clr-gray-900),
+    border: var(--clr-base-white),
   ),
   gray: (
     default: var(--clr-gray-600),
